# rust-example-app

./: .env.example  CODE.md  Cargo.toml  Earthfile  Justfile  README.md  stack.dev.yaml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.postgres.yml  docker-compose.yml
.github/workflows/: ci.yml
crates/asset-pipeline/: Cargo.toml  package-lock.json  package.json
crates/asset-pipeline/src/: lib.rs
crates/clorinde/src/queries/: users.rs
crates/db/: Cargo.toml  Code.md  Encrypt.md  replibyte.yaml
crates/db/migrations/: 20251226133542_auth.sql  20251226135432_auth_teams.sql  20251226140314_auth_rbac.sql  20251226141316_encrypt.sql  20251226173759_auth_sessions.sql  20251226175252_backup_role.sql
crates/db/queries/: users.sql
crates/db/src/: lib.rs
crates/grpc-api/: Cargo.toml  build.rs
crates/grpc-api/protos/: api.proto
crates/grpc-api/src/: lib.rs
crates/web-assets/: build.rs  input.css  package-lock.json  package.json  tailwind.config.js
crates/web-assets/js/: islands.js
crates/web-assets/src/: lib.rs
crates/web-csr/: Cargo.toml
crates/web-csr/src/: lib.rs
crates/web-pages/: Cargo.toml
crates/web-pages/src/: layout.rs  lib.rs  root.rs
crates/web-server/: Cargo.toml  Justfile
crates/web-server/src/: api_service.rs  authentication.rs  config.rs  errors.rs  main.rs  root.rs  static_files.rs
dev-env-as-code/: Dockerfile  README.md
infra-as-code/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  README.md  cluster-config.template.yaml  cluster-setup.ts  database.ts  hetzner-server.ts  index.ts  package-lock.json  package.json
nails/: bruno.json  gRPC-UserService.bru
