[package]
name = "web-csr"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["Document", "Element", "Event", "HtmlElement", "Node", "Window", "console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.56"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"